--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
 <header id="header">
   <a href="" id="header__logo"></a>
-  <div id="header__wrap">
-    <h1 id="header__title"></h1>
+  <div id="header__wrap" class="container">
+    <h1 id="header__title">FIND BEST EVENTS AROUND THE WORLD</h1>
     <label for="header__searching" class="header__label">
-      <input type="text" id="header__searching" placeholder="Start searching" />
-      <svg>
+      <input type="text" id="header__searching" placeholder="Start searching" class="header__input"/>
+      <svg width="12" height="12" class="header__search--icon header__svg">
         <use href="./images/symbol-defs.svg#search"></use>
       </svg>
     </label>
     <label for="header__country" class="header__label">
-      <input type="text" id="header__country" placeholder="Choose country" />
-      <svg>
+      <input type="text" id="header__country" placeholder="Choose country" class="header__input"/>
+      <svg width="13" height="8" class="header__country--icon header__svg">
         <use href="./images/symbol-defs.svg#drop-down_menu"></use>
       </svg>
     </label>
