--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,5 @@
 @import './utils/common';
+@import './base/reset';
 @import './utils/container';
 @import './layout/header';
 @import './layout/events';
