--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,5 +2,6 @@
 @import './base/reset';
 @import './utils/container';
 @import './layout/header';
+@import './components/dropDownMenu';
 @import './layout/events';
 @import './layout/footer';
