--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -3,7 +3,7 @@
 
 <main id="main" >
   <section class="events container">
-    <h2>Upcoming Events</h2>
+    <!-- <h2>Upcoming Events</h2> -->
     <ul id="events__list" class="events__list">
       
     </ul>
