--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -1,1 +1,14 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+body {
+    background-color: #0E0E0E;
+}
+
+p {
+    color: #FFFFFF;
+    ;
+}
+
+
+
+
