--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -1,8 +1,14 @@
-<main id="main" >
+<!-- <main id="main" >
   <section class="events container">
     <h2>Upcoming Events</h2>
     <ul id="events__list" class="events__list">
       
     </ul>
   </section>
-</main>
+</main> -->
+
+<div>
+  <ul class="articles js-articles-container"></ul>
+
+  <div id="pagination2" class="tui-pagination"></div>
+</div>
