--- a/src/sass/layout/_events.scss
+++ b/src/sass/layout/_events.scss
@@ -1,12 +1,34 @@
-#main{
-  background-color: #0E0E0E;
+#main {
+  background-color: #0e0e0e;
 }
 
-.events__image{
+.events__image {
   width: 128px;
   height: 161px;
 }
 
-.egorPrimiPullRequest{
-  
+.main__svg > use {
+  fill: #fff;
+  width: 12px;
+  height: 12px;
+}
+
+.tui-first {
+  display: none !important;
+}
+
+.tui-prev {
+  display: none !important;
+}
+
+a.tui-next {
+  display: none !important;
+}
+
+// a.tui-last {
+//   display: none !important;
+// }
+
+.hide {
+  display: none;
 }
