--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -1,6 +1,8 @@
 <main id="main">
   <section class="events container">
-    <ul class="js-articles-container events__list" id="events__list"></ul>
+    <ul class="js-articles-container events__list" id="events__list">
+      <div class="create"></div>
+    </ul>
     <div id="pagination2" class="tui-pagination"></div>
   </section>
 </main>
