--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,4 +4,5 @@
 @import './layout/header';
 @import './components/dropDownMenu';
 @import './layout/events';
+@import './components/modal';
 @import './layout/footer';
