--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 25px;
+  align-items: center;
   // justify-content: center;
   // text-align: center;
   @media screen and (min-width: 480px) {
