Describe the changes you made

--- a/src/sass/layout/_events.scss
+++ b/src/sass/layout/_events.scss
@@ -1,4 +1,8 @@
 
+
+button{
+  background-color: transparent;
+}
 .tui-first {
   display: none !important;
 }
@@ -87,7 +91,7 @@ row-gap: 5px;
 
     left: 29px;
     bottom: 161px;
-    border: 2px solid #DC56C54D; 
+    border: 2px solid #ffff; 
 
          
     
